--- a/railway.toml
+++ b/railway.toml
@@ -7,4 +7,4 @@ healthcheckPath = "/health"
 healthcheckTimeout = 30
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
-sleepApplication = true
+#sleepApplication = true
