docs: Promote Sentry to recommended, update env examples and deployment guide

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@
 DATABASE_URL=postgresql+asyncpg://whendoist:whendoist@localhost:5432/whendoist
 
 # Database connection pool settings (optional, defaults shown)
-# DB_POOL_SIZE=5        # Number of persistent connections
-# DB_MAX_OVERFLOW=10    # Max extra connections under load
-# DB_POOL_RECYCLE=300   # Recycle connections after N seconds
+# DB_POOL_SIZE=2        # Number of persistent connections
+# DB_MAX_OVERFLOW=3     # Max extra connections under load
+# DB_POOL_RECYCLE=1800  # Recycle connections after N seconds (30 minutes)
 
 # -----------------------------------------------------------------------------
 # Application
@@ -54,3 +54,17 @@ GOOGLE_CLIENT_SECRET=
 # When enabled, a "Try Demo Account" button appears on the login page.
 # Default: false (completely invisible when disabled)
 DEMO_LOGIN_ENABLED=false
+
+# -----------------------------------------------------------------------------
+# Error Tracking & Monitoring (Recommended for Production)
+# -----------------------------------------------------------------------------
+# Sentry provides exception tracking, performance monitoring, and alerts.
+# Sign up at https://sentry.io (free tier: 5K errors/month)
+# Get your DSN from: Settings → Projects → Your Project → Client Keys (DSN)
+SENTRY_DSN=
+
+# Environment name (appears in Sentry, logs, and metrics)
+# Development: development
+# Production:  production
+# PR Previews: preview
+ENVIRONMENT=development
